--- a/app/src/main/res/layout/control4title.xml
+++ b/app/src/main/res/layout/control4title.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/title_bg">
 
     <Button
         android:id="@+id/title_back"
@@ -9,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="5dp"
-
+        android:background="@drawable/back_bg"
         android:text="Back"
         android:textColor="#000" />
 
@@ -22,6 +23,7 @@
         android:gravity="center"
         android:text="@string/title_text"
         android:textColor="#000"
+        android:background="@drawable/title_bg"
         android:textSize="24sp" />
 
     <Button
@@ -31,6 +33,7 @@
         android:layout_gravity="center"
         android:layout_margin="5dp"
         android:text="Edit"
+        android:background="@drawable/edit_bg"
         android:textColor="#000" />
 
 </LinearLayout>
