--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,11 +32,34 @@
         android:text="@string/listview"
         android:textAllCaps="false" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/recycler_view"
-        android:text="@string/recyclerview"
-        android:textAllCaps="false" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/recycler_view"
+            android:layout_weight="1"
+            android:text="@string/recyclerview"
+            android:textAllCaps="false" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rv_vertview"
+            android:layout_weight="1"
+            android:text="@string/rvvert"
+            android:textAllCaps="false" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rv_waterfallview"
+            android:layout_weight="1"
+            android:text="@string/rvWaterfallView"
+            android:textAllCaps="false" />
+    </LinearLayout>
 
 </LinearLayout>
