--- a/app/src/main/res/layout-sw600dp/fragments.xml
+++ b/app/src/main/res/layout-sw600dp/fragments.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/news_title_layout"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <fragment
         android:id="@+id/news_title_fragment"
         android:name="com.v51das.android.skeletonapp.activities.FragNewsTitle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
@@ -21,8 +21,7 @@
             android:id="@+id/news_content_fragment"
             android:name="com.v51das.android.skeletonapp.activities.FragNewsContent"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="match_parent" />
     </FrameLayout>
 
 </LinearLayout>
