--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:scrollbars="vertical">
 
     <Button
         android:id="@+id/serializableActivity4Result"
@@ -33,6 +34,7 @@
         android:textAllCaps="false" />
 
     <LinearLayout
+        android:id="@+id/id_rv"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_height="wrap_content">
@@ -75,6 +77,52 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/frag_btn"
+        android:textAllCaps="false" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/bc_std"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/bc_std"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/bc_ord"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/bc_ord"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/bc_cut"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/bc_cut"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/bc_lcl"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/bc_lcl"
+            android:textAllCaps="false" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/bc_eg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/bc_eg"
         android:textAllCaps="false" />
 
 </LinearLayout>
