--- a/app/src/main/res/layout/activity_bc_eg.xml
+++ b/app/src/main/res/layout/activity_bc_eg.xml
@@ -45,6 +45,23 @@
             android:inputType="textPassword" />
     </LinearLayout>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+
+        <CheckBox
+            android:id="@+id/rmb_pass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="记住密码？" />
+    </LinearLayout>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="60dp"
