增加数据持久化

--- a/app/src/main/res/layout/activity_dp_sp_file.xml
+++ b/app/src/main/res/layout/activity_dp_sp_file.xml
@@ -16,4 +16,11 @@
         android:id="@+id/sp_restore"
         android:text="Restore Data" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/dp_sp_rmb"
+        android:text="SharedPref例子：记住密码"
+        android:textAllCaps="false" />
+
 </LinearLayout>
