--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -183,12 +183,25 @@
             android:id="@+id/read_contect"
             android:layout_weight="1"
             android:text="读取联系人" />
-        <!--  -->
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/cust_cp"
             android:layout_weight="1"
             android:text="访问自定义CP示例" />
+    </LinearLayout>
+    <!--media-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/media_notify"
+            android:text="通知" />
     </LinearLayout>
 </LinearLayout>
