--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -322,6 +322,18 @@
                     android:text="Service Basic" />
 
             </LinearLayout>
+            <!--lsb-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/lbs_basic"
+                    android:text="获取位置" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
